# wakanda_codec

./: .gitignore  pyproject.toml  requirements.txt
codec/evaluation/: config.py  espnet.py  evaluate.py  evaluator.py  mcd.py  metrics.py  model_manager.py  speaker_sim.py  torchmetrics.py  utmos.py  wer.py
codec/model/: base.py  dac.py  discriminator.py  transformer_codec.py  wac.py
codec/nn/: __init__.py  layers.py  loss.py  quantize.py  transformer.py
codec/tts/: collator.py  dataset.py  depth_transformer.py  trainer.py  tts_model.py
codec/utils/: audio_tokenizer.py  extract_codes.py  file_discovery.py  librispeech.py
config/: dac_16k.yaml  evaluation_en.yaml  transformercodec_16k.yaml
config/tts_configs/: codec_config.yaml  ds_zero2.json  train_config.yaml
scripts/: compare_results.py  evaluate.py  summarize_results.py  train.py  train_zs-tts.py
utils/: dac_inference.py  install_pesq.sh  snac_inference.py
utils/dataprep/: extract_speaker_embeddings.py  librispeech_prep_eval.py  librispeech_prep_train.py  tts_dataprep.py
utils/inference/: mimi_inference.py
